<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:onClick="handleLoginButton"
    android:background="#000000">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="159dp"
        android:hint="@string/userName"
        android:textColor="#FFF"
        android:textColorHint="#2f4f4f"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/password"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:linksClickable="false"
        android:singleLine="false"
        android:textColor="#FFF"
        android:hint="@string/userPassword"
        android:textColorHint="#2f4f4f"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:id="@+id/loginbutton"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberLogin"
        android:id="@+id/checkBox"
        android:textSize="18dp"
        android:checked="false"
        android:textColor="#F89406"
        android:layout_marginBottom="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotButton"
        android:id="@+id/forgotbutton"
        android:textColor="#F89406"
        android:layout_above="@+id/checkBox"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
